--- a/src/main/resources/UI/SceneTwoPlayerName.fxml
+++ b/src/main/resources/UI/SceneTwoPlayerName.fxml
@@ -11,16 +11,11 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane cacheShape="false" centerShape="false" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.FXMLController">
+<Pane cacheShape="false" centerShape="false" pickOnBounds="false" snapToPixel="false" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.FXMLControllerSceneOne">
    <children>
-      <TextField layoutX="504.0" layoutY="282.0" prefHeight="59.0" prefWidth="149.0" promptText="Spieler Anzahl" />
-      <TextField layoutX="99.0" layoutY="424.0" prefHeight="46.0" prefWidth="390.0" promptText="Spilername eingeben">
-         <font>
-            <Font size="24.0" />
-         </font>
-      </TextField>
+      <TextField fx:id="numbersOfPlayer" layoutX="336.0" layoutY="295.0" prefHeight="34.0" prefWidth="125.0" promptText="Spieler Anzahl" />
       <Button fx:id="toSceneTree" layoutX="596.0" layoutY="574.0" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#toSceneTree" prefHeight="43.0" prefWidth="168.0" text="Weiter &gt;" />
-      <Button fx:id="backToSceneTwo" layoutX="77.0" layoutY="574.0" mnemonicParsing="false" onAction="#backToSceneOne" prefHeight="51.0" prefWidth="340.0" text="&lt; Zurück zu Spieleranazahl" />
+      <Button fx:id="backToSceneTwo" layoutX="77.0" layoutY="574.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="340.0" text="&lt; Zurück zu Spieleranazahl" />
       <Label layoutX="294.0" layoutY="56.0" prefHeight="111.0" prefWidth="332.0" text="Leiterspiel">
          <font>
             <Font size="53.0" />
@@ -31,13 +26,13 @@
             <Font size="29.0" />
          </font>
       </Label>
-      <Label layoutX="91.0" layoutY="279.0" prefHeight="66.0" prefWidth="300.0" text="Anzahl eingegebene Spieler:" />
+      <Label layoutX="77.0" layoutY="279.0" prefHeight="66.0" prefWidth="300.0" text="Anzahl eingegebene Spieler:" />
    </children>
    <opaqueInsets>
       <Insets />
    </opaqueInsets>
    <cursor>
-      <Cursor fx:constant="SE_RESIZE" />
+      <Cursor fx:constant="DEFAULT" />
    </cursor>
    <padding>
       <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
