--- a/src/main/resources/UI/SceneOneInizilisizePlayers.fxml
+++ b/src/main/resources/UI/SceneOneInizilisizePlayers.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.FXMLControllerSceneOne">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.FXMLControllerSceneOneInizialisizePlayers">
    <children>
       <TextField editable="false" layoutX="189.0" layoutY="41.0" prefHeight="205.0" prefWidth="594.0" text="Leiterspiel">
          <font>
