--- a/src/main/resources/UI/start.fxml
+++ b/src/main/resources/UI/start.fxml
@@ -12,25 +12,12 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.FXMLControllerSceneOne">
+<Pane prefHeight="600.0" maxHeight="600" prefWidth="1000.0" maxWidth="1000" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.FXMLControllerSceneOne">
    <children>
-      <TextField editable="false" layoutX="189.0" layoutY="41.0" prefHeight="205.0" prefWidth="594.0" text="Leiterspiel">
-         <font>
-            <Font size="96.0" />
-         </font>
-      </TextField>
-      <TextField editable="false" layoutX="385.0" layoutY="246.0" prefHeight="51.0" prefWidth="217.0" text="by M&amp;R">
-         <font>
-            <Font size="36.0" />
-         </font>
-      </TextField>
-      <TextField editable="false" layoutX="28.0" layoutY="349.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="77.0" prefWidth="594.0" text="Bitte geben sie die Anzahl Spieler ein ">
-         <font>
-            <Font size="31.0" />
-         </font>
-      </TextField>
-      <TextField fx:id="amountPlayerTextfield" layoutX="665.0" layoutY="362.0" prefWidth="149.0" promptText="Spieler Anzahl  2-8" />
-      <CheckBox layoutX="52.0" layoutY="459.0" mnemonicParsing="false" text="Mit Computer Spielen" />
+      <fx:include source="header.fxml"/>
+      <Label layoutX="100.0" layoutY="150.0" text="Bitte geben Sie die Anzahl Spieler ein"></Label>
+      <TextField fx:id="amountPlayerTextfield" layoutX="100.0" layoutY="180.0" prefWidth="150.0" promptText="Spieler Anzahl  2-8" />
+      <CheckBox layoutX="100.0" layoutY="230.0" mnemonicParsing="false" text="Zusätzlich mit Computer Spielen" />
       <Button fx:id="addAmountButton" layoutX="767.0" layoutY="504.0" mnemonicParsing="false" onAction="#addAmountButton" prefHeight="43.0" prefWidth="168.0" text="Weiter &gt;" />
       <Label fx:id="errorMessage" layoutX="22.0" layoutY="540.0" text="..." textFill="#f50707">
          <font>
