--- a/src/main/resources/UI/SceneTreePlayerListAndStartGame.fxml
+++ b/src/main/resources/UI/SceneTreePlayerListAndStartGame.fxml
@@ -1,34 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="662.0" minWidth="860.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.FXMLControllerSceneTreePlayerListAndStartGame">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="662.0" minWidth="860.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.FXMLControllerSceneTreePlayerListAndStartGame">
    <children>
       <TextField layoutX="132.0" layoutY="261.0" prefHeight="34.0" prefWidth="237.0" text="Spieler:">
          <font>
             <Font size="36.0" />
          </font>
       </TextField>
-      <TextField layoutX="195.0" layoutY="372.0" promptText="Spieler" />
-      <TextField layoutX="195.0" layoutY="435.0" promptText="Spieler" />
-      <TextField layoutX="195.0" layoutY="501.0" promptText="Spieler" />
-      <TextField layoutX="556.0" layoutY="372.0" promptText="Spieler" />
-      <TextField layoutX="556.0" layoutY="435.0" promptText="Spieler" />
-      <TextField layoutX="556.0" layoutY="501.0" promptText="Spieler" />
-      <TextField layoutX="195.0" layoutY="565.0" prefHeight="37.0" prefWidth="237.0" promptText="Spieler" />
       <Button fx:id="backToSceneTwo" layoutX="27.0" layoutY="606.0" mnemonicParsing="false" onAction="#backToSceneTwo" prefHeight="43.0" prefWidth="168.0" text="&lt; Zurück zu Spieler Name" />
       <Button fx:id="goToSceneFive" layoutX="718.0" layoutY="606.0" mnemonicParsing="false" onAction="#goToSceneFive" prefHeight="43.0" prefWidth="168.0" text="Spiel Starten &gt;" />
-      <Circle fill="#9aff1f" layoutX="166.0" layoutY="397.0" radius="13.0" stroke="BLACK" strokeType="INSIDE" />
-      <Circle fill="#1fdfff" layoutX="166.0" layoutY="460.0" radius="13.0" stroke="BLACK" strokeType="INSIDE" />
-      <Circle fill="#5f1fff" layoutX="166.0" layoutY="527.0" radius="13.0" stroke="BLACK" strokeType="INSIDE" />
-      <Circle fill="#ff4f1f" layoutX="524.0" layoutY="398.0" radius="13.0" stroke="BLACK" strokeType="INSIDE" />
-      <Circle fill="#ff1fa2" layoutX="524.0" layoutY="461.0" radius="13.0" stroke="BLACK" strokeType="INSIDE" />
-      <Circle fill="#ff1f1f" layoutX="524.0" layoutY="527.0" radius="13.0" stroke="BLACK" strokeType="INSIDE" />
-      <Circle fill="#010e1b" layoutX="166.0" layoutY="591.0" radius="13.0" rotate="-141.3" stroke="BLACK" strokeType="INSIDE" />
       <Label layoutX="354.0" layoutY="46.0" text="Leiterspiel">
          <font>
             <Font size="68.0" />
