--- a/src/main/resources/UI/SceneTreePlayerListAndStartGame.fxml
+++ b/src/main/resources/UI/SceneTreePlayerListAndStartGame.fxml
@@ -6,24 +6,10 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="662.0" minWidth="860.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.FXMLControllerSceneTreePlayerListAndStartGame">
+<Pane prefHeight="600.0" maxHeight="600" prefWidth="1000.0" maxWidth="1000" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.FXMLControllerSceneTreePlayerListAndStartGame">
    <children>
-      <TextField layoutX="132.0" layoutY="261.0" prefHeight="34.0" prefWidth="237.0" text="Spieler:">
-         <font>
-            <Font size="36.0" />
-         </font>
-      </TextField>
-      <Button fx:id="backToSceneTwo" layoutX="27.0" layoutY="606.0" mnemonicParsing="false" onAction="#backToSceneTwo" prefHeight="43.0" prefWidth="168.0" text="&lt; Zurück zu Spieler Name" />
-      <Button fx:id="goToSceneFive" layoutX="718.0" layoutY="606.0" mnemonicParsing="false" onAction="#goToSceneFive" prefHeight="43.0" prefWidth="168.0" text="Spiel Starten &gt;" />
-      <Label layoutX="354.0" layoutY="46.0" text="Leiterspiel">
-         <font>
-            <Font size="68.0" />
-         </font>
-      </Label>
-      <Label layoutX="443.0" layoutY="137.0" text="By R&amp;M">
-         <font>
-            <Font size="36.0" />
-         </font>
-      </Label>
+      <fx:include source="header.fxml"/>
+      <Button fx:id="backToSceneTwo" layoutX="20.0" layoutY="530.0" mnemonicParsing="false" onAction="#backToSceneTwo" prefHeight="43.0" prefWidth="168.0" text="&lt; Zurück zu Spieler Name" />
+      <Button fx:id="goToSceneFive" layoutX="810.0" layoutY="530.0" mnemonicParsing="false" onAction="#goToSceneFive" prefHeight="43.0" prefWidth="168.0" text="Spiel Starten &gt;" />
    </children>
 </Pane>
