--- a/src/main/resources/UI/ScenePlayField.fxml
+++ b/src/main/resources/UI/ScenePlayField.fxml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.paint.*?>
-<?import javafx.scene.effect.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.text.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.control.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.Blend?>
+<?import javafx.scene.effect.Light.Distant?>
+<?import javafx.scene.effect.Lighting?>
+<?import javafx.scene.effect.Shadow?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.shape.Circle?>
+<?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="894.0" prefWidth="1315.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.FXMLControllerSceneFivePlayfield">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="894.0" prefWidth="1315.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.FXMLControllerScenePlayfield">
    <children>
       <Circle fill="#010e1b" layoutX="907.0" layoutY="692.0" radius="13.0" stroke="BLACK" strokeType="INSIDE" />
       <Circle fill="#ff1f1f" layoutX="907.0" layoutY="638.0" radius="13.0" stroke="BLACK" strokeType="INSIDE" />
@@ -1637,8 +1638,6 @@
             <Font size="36.0" />
          </font>
       </TextField>
-      <Button layoutX="801.0" layoutY="745.0" mnemonicParsing="false" prefHeight="56.0" prefWidth="56.0" text="Würfel" />
-      <TextField layoutX="858.0" layoutY="745.0" promptText="gewürfelte Zahl" />
       <Button fx:id="spielBeenden" layoutX="872.0" layoutY="829.0" mnemonicParsing="false" onAction="#toSceneSix" text="Spiel beenden" />
    </children>
    <effect>
