--- a/src/main/resources/UI/SceneRankingAndRestart.fxml
+++ b/src/main/resources/UI/SceneRankingAndRestart.fxml
@@ -4,11 +4,16 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.Pane?>
 
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.image.Image?>
 <Pane maxHeight="600" maxWidth="1000" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.FXMLControllerSceneRankingAndRestart">
    <children>
       <fx:include source="header.fxml" />
-      <Button layoutX="52.0" layoutY="500.0" mnemonicParsing="false" onAction="#goToSceneFive" prefHeight="51.0" prefWidth="163.0" text="Revange" />
-      <Button layoutX="385.0" layoutY="500.0" mnemonicParsing="false" onAction="#backToSceneOne" prefHeight="51.0" prefWidth="231.0" text="Spiel neu Starten" />
+
+      <ImageView fitHeight="200.0" fitWidth="200" layoutX="450" layoutY="150">
+         <image><Image url="@images/letsplay.png"></Image></image>
+      </ImageView>
+
       <Button fx:id="beenden" layoutX="756.0" layoutY="500.0" mnemonicParsing="false" onAction="#closeApplication" prefHeight="51.0" prefWidth="191.0" text="Spiel beenden" />
       <Label layoutX="107.0" layoutY="242.0" text="Rangliste:" />
    </children>
